# backstage-pyactions

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  artifacthub-repo.yml  backstage-pyactions-0.1.0.tgz  docker-compose.yml  index.yaml  main.py  modules.yaml  pyproject.toml
app/core/: config.py  dependencies.py  discovery.py  logging.py  security.py
app/modules/examples/: create_service_pseudo.py
app/modules/examples/basic-testing/list_directory/: module.py
app/modules/examples/basic-testing/make_directory/: module.py  schemas.py
app/modules/examples/basic-testing/print_working_dir/: module.py  schemas.py
app/modules/examples/list_directory/: schemas.py
app/modules/examples/providers/github/: module.py  schemas.py
app/modules/examples/providers/gitlab/: module.py  schemas.py
app/modules/examples/workflows/: update_config_pseudo.py
app/providers/: base.py
app/providers/git/: github.py  gitlab.py
app/templates/examples/ci/: github-actions.yml  gitlab-ci.yml
app/templates/examples/docker/: Dockerfile.node  Dockerfile.python
app/templates/examples/helm/: values.yml
app/templates/examples/kubernetes/: argo-app.yml
docs/backstage-integration/: README.md  app-config-example.yaml
docs/backstage-integration/templates/: test-github-provider.yaml  test-gitlab-provider.yaml
docs/k8s-deployment/: README.md
docs/k8s-deployment/helm/: Chart.yaml  README.md  values.yaml
docs/k8s-deployment/helm/templates/: deployment.yaml  networkpolicy.yaml
tests/: test_discovery.py  test_security.py
